# MARSYS

./: .gitignore  404.html  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTING_RULES.md  COPYRIGHT  Justfile  LICENSE  MERGE_NOTES.md  README.md  example_01_Deep_Research.py  example_01_Deep_Research_multi-agent.py  example_02_Google_Search_Multi_Tab_Research.py  graphical_interface.ipynb  index.html  mkdocs.yml  objects.inv  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test_Browser_Agent_with_Google.ipynb  test_Deep_Research_multi-agent.ipynb  test_browser_agent_google.py  test_graphical_control_browser.ipynb  vllm_inference-vision-language.ipynb
.github/instructions/: AI_Agent_Development_Guidelines.instructions.md  AI_Agent_Guidelines.instructions.md  Contributing_Rules.instructions.md  Framework_Development_Guide.instructions.md  marsys_summary_architecture.instructions.md  marsys_summary_architecture.md
.github/workflows/: deploy.yml  test-full.yml  test-smoke.yml
CLA/: index.html
CLA_SETUP_GUIDE/: index.html
api/agent-class/: index.html
api/communication/: index.html
api/configuration/: index.html
api/execution/: index.html
api/memory/: index.html
api/models/: index.html
api/orchestra/: index.html
api/overview/: index.html
api/rules/: index.html
api/state/: index.html
api/tools/: index.html
api/topology/: index.html
api/tracing/: index.html
api/validation/: index.html
apps/desktop/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src/: main.rs
apps/tui/: LICENSE  README.md  pyproject.toml
apps/tui/src/spren_tui/: __init__.py  __main__.py
apps/tui/tests/: test_smoke.py
apps/web/: .gitignore  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
architecture/: index.html
assets/css/: main.css
assets/js/: main.js
benchmarks/GAIA/: gaia_runner.py  test_parallel_tracing.py  test_parallel_tracing_canonical.py  test_parallel_tracing_canonical_anthropic.py
concepts/agents/: index.html
concepts/browser-automation/: index.html
concepts/communication/: index.html
concepts/coordination-tools/: index.html
concepts/custom-agents/: index.html
concepts/det-nodes/: index.html
concepts/error-handling/: index.html
concepts/learning-agents/: index.html
concepts/memory/: index.html
concepts/messages/: index.html
concepts/models/: index.html
concepts/overview/: index.html
concepts/planning/: index.html
concepts/registry/: index.html
concepts/run-filesystem/: index.html
concepts/specialized-agents/: index.html
concepts/state-management/: index.html
concepts/tools/: index.html
concepts/tracing/: index.html
contributing/: index.html
docs/: CLA.md  CLA_SETUP_GUIDE.md  CNAME  agents.md  architecture.md  crew.md  index.md  overview.md  requirements.txt
docs/api/: agent-class.md  communication.md  configuration.md  execution.md  index.md  memory.md  models.md  orchestra.md  overview.md  rules.md  state.md  tools.md  topology.md  tracing.md  validation.md
docs/architecture/: README.md
docs/concepts/: agents.md  branching.md  browser-automation.md  communication.md  coordination-tools.md  core-concepts.md  custom-agents.md  det-nodes.md  error-handling.md  execution-flow.md  file-operation-agent.md  index.md  learning-agents.md  memory-patterns.md  memory.md  messages.md  models.md  overview.md  planning.md  registry.md  run-filesystem.md  schema_validation.md  specialized-agents.md  state-management.md  tools.md  topologies.md  tracing.md  validation-routing.md  web-search-agent.md
docs/contributing/: architecture.md  development.md  guidelines.md  index.md  overview.md  testing.md
docs/getting-started/: configuration.md  first-agent.md  index.md  installation.md  quick-start.md
docs/guides/: built-in-tools.md  file-operations.md  multimodal-agents.md  overview.md  specialized-tools.md  steering-and-error-recovery.md
docs/legal/: LICENSING.md
docs/modules/: agents.md  branch_executor.md  branch_spawner.md  branch_types.md  context_manager.md  memory.md  models.md  orchestra.md  router.md  router_summary.md  rules_engine.md  state_manager.md  step_executor.md  topology.md  validation_processor.md
docs/project/: faq.md  overview.md
docs/tutorials/: basic-usage.md  overview.md
docs/use-cases/: code-review.md  content-creation.md  customer-support.md  data-pipeline.md  index.md  overview.md  research-assistant.md  research-team.md  web-automation.md
examples/: README.md  anthropic_code_review_example.py  example_01_Deep_Research.py  example_02_local_models.py  mixed_providers_debate_example.py  openai_advanced_features_example.py  openai_research_team_example.py  router_integration_example.py  session08_workflow_roundtrip.py  three_way_topology_demo.py
examples/real_world/: example_parallel_market_analysis.py
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/first-agent/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/built-in-tools/: index.html
guides/file-operations/: index.html
guides/multimodal-agents/: index.html
guides/specialized-tools/: index.html
guides/steering-and-error-recovery/: index.html
legal/LICENSING/: index.html
live_tests/: README.md
live_tests/tracing/: deep_research.py  parallel.py  secret_word_pipeline.py
project/overview/: index.html
scripts/: README.md  generate_aggui_custom_events_doc.py
scripts/scenarios/: marsys_direct_probe.py  run_failure_probe.py  workflow_crud_journey.py
search/: search_index.json
src/agents/: __init__.py  agent_pool.py  agents.py  browser_agent.py  browser_agent_legacy.py  exceptions.py  learnable_agents.py  memory.py  pool_factory.py  registry.py  utils.py
src/coordination/: __init__.py  config.py  context_manager.py  event_bus.py  orchestra.py
src/crew/: crew.py
src/environment/: browser_utils.py  operator.py  tools.py  utils.py  web_browser.py  (+1 more)
tests/: test_browser_agent_basic.py
use-cases/: index.html
(+603 files in other folders)
