[project]
name = "multi-agent-ai-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.5.2",
    "autoawq>=0.2.7.post3",
    "flash-attn>=2.7.4.post1",
    "flashinfer-python",
    "ninja>=1.11.1.3",
    "peft>=0.15.0",
    "playwright>=1.51.0",
    "pydantic>=2.10.6",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "triton>=3.2.0",
    "vllm>=0.8.1",
]

[tool.uv.sources]
bitsandbytes = { git = "https://github.com/bitsandbytes-foundation/bitsandbytes.git" }
flashinfer-python = { git = "https://github.com/flashinfer-ai/flashinfer.git" }
