[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marsys"
version = "0.2.1-beta"
description = "A powerful framework for orchestrating collaborative AI agents with sophisticated reasoning, planning, and autonomous capabilities"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Reza Hosseini", email = "reza@marsys.ai"}
]
maintainers = [
    {name = "Reza Hosseini", email = "reza@marsys.ai"}
]
keywords = [
    "ai", "agents", "multi-agent", "llm", "orchestration",
    "coordination", "reasoning", "planning", "autonomous",
    "openai", "anthropic", "claude", "gpt", "gemini",
    "multi-agent-systems", "agent-framework", "ai-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

# Core dependencies (DEFAULT installation)
dependencies = [
    # Framework core
    "pydantic>=2.11.9",
    "requests>=2.32.3",
    "click>=8.1.0",  # CLI framework
    "psutil>=7.1.0",
    "packaging>=25.0",
    "aiohttp>=3.12.15",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
    # Browser automation
    "playwright>=1.55.0",
    "pillow>=12.0.0",  # Updated for file operations image handling
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",  # Fast HTML parsing for search tools
    "brotli>=1.1.0",  # Compression support for HTTP requests
    "markdownify>=1.2.0",
    # UI/Terminal
    "rich>=14.1.0",
    "textual>=6.2.0",
    "python-dateutil>=2.9.0",
    # Tools
    "pypdf>=3.0.0",
    "googlesearch-python>=1.3.0",
    # File operations (moved from optional to core)
    "PyMuPDF>=1.26.0",     # PDF text/image extraction and layout analysis
    "chardet>=5.2.0",      # Character encoding detection
    # Logging
    "structlog>=25.4.0",
    "python-json-logger>=2.0.7",
    # Validation
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
# Local models: DEFAULT + PyTorch + Transformers + Learning + Qwen-VL
local-models = [
    "torch>=2.6.0",
    "torchvision>=0.23.0",
    "transformers>=4.54,<5.0",
    "accelerate>=1.5.2",
    "peft>=0.17.1",
    "trl>=0.22.1",
    "datasets>=4.1.1",
    "decord>=0.6.0",
    "qwen-vl-utils>=0.0.8",
]

# Production inference: vLLM + Flash Attention
production = [
    "vllm>=0.10.2",
    "flash-attn>=2.7.4.post1",
    "triton>=3.4.0",
    "ninja>=1.13.0",
]

# Development: ALL + testing + docs
dev = [
    # Local models
    "torch>=2.6.0",
    "torchvision>=0.23.0",
    "transformers>=4.54,<5.0",
    "accelerate>=1.5.2",
    "peft>=0.17.1",
    "trl>=0.22.1",
    "datasets>=4.1.1",
    "decord>=0.6.0",
    "qwen-vl-utils>=0.0.8",
    # Production
    "vllm>=0.10.2",
    "flash-attn>=2.7.4.post1",
    "triton>=3.4.0",
    "ninja>=1.13.0",
    # Testing
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "pytest-cov>=6.2.1",
    # Code quality
    "black>=25.0.0",
    "flake8>=7.1.0",
    "mypy>=1.13.0",
    # Documentation
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
]

[project.urls]
Homepage = "https://marsys.ai"
Documentation = "https://marsys.ai"
Repository = "https://github.com/rezaho/MARSYS"
Issues = "https://github.com/rezaho/MARSYS/issues"
Changelog = "https://github.com/rezaho/MARSYS/blob/main/CHANGELOG.md"
Discussions = "https://github.com/rezaho/MARSYS/discussions"

[project.scripts]
marsys = "marsys.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "asyncio: mark test as an asyncio test",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
