[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spren-tui"
version = "0.3.0"
description = "MARSYS Spren — Textual TUI client (placeholder; full implementation in v0.4)."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "FSL-1.1-ALv2"}
dependencies = [
    "textual>=6.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4",
]

[project.scripts]
spren-tui = "spren_tui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
